16Nov07=======================================================================
1. add CTY-1709 prefix changes
2. added extra checking for the time stamp on PC9x sentences. These must now
be within 15 minutes (configurable) of this node's time to be accepted.
3. made show/newc terminal width aware.
24Oct07=======================================================================
1. Added CTY-1708 prefix changes
23Oct07=======================================================================
1. Added CTY-1707 prefix changes
15Oct07=======================================================================
1. prevent PC61 from propagating outside spider boxes.
2. simplify the regex for sh/contest to allow it to work on perl < 5.8.x.
09Oct07=======================================================================
1. Added *VERY* important change to prevent loops on PC9x sentences.
06Oct07=======================================================================
1. added the possibility of having a motd_ax25 especially for sending to
radio connections after a suggestion by Paolo YV1DIG.
05Oct07=======================================================================
1. Handle PC61 from VE1CC clusters as PC11.
01Oct07=======================================================================
1. fix .gtkconsole_data creation bug.
27Sep07=======================================================================
1. Fixed gtkconsole to split out all the windows. See
/spider/gtkconsole/README for installation and usage instructions. This
program will work on both Windows and Linux provided the extra Gtk2 perl
libraries + dependencies are installed. Instructions for getting them are in
the README file.
25Sep07=======================================================================
1. Fix mrtg command so that it does not require /var/lock (which anyway gets
removed and recreated on boot - and the debianised mrtg does not recognise
that) nor /var/lib/mrtg for the confcache (whatever that is).