@@ -1,3 +1,5 @@
+17Nov07=======================================================================
+1. Add Local::ann() as requested by Felipe PY1NB.
 16Nov07=======================================================================
 1. add CTY-1709 prefix changes
 2. added extra checking for the time stamp on PC9x sentences. These must now
